src/objects/Salesforce_Connect_Service_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Detail_Endpoint__c</fullName>
        <inlineHelpText>Enter the Endpoint url path to retrieve a single external record. This value will be added to the Base_Endpoint__c to construct the final http endpoint value.</inlineHelpText>
        <label>Detail Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field_Separator__c</fullName>
        <defaultValue>&quot;.&quot;</defaultValue>
        <label>Key Field Separator</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Fields__c</fullName>
        <inlineHelpText>Enter the API Field Names that will be used to create a Unique Key</inlineHelpText>
        <label>Key Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Endpoint__c</fullName>
        <inlineHelpText>Enter the Endpoint url path to retrieve a list of external records. This value will be added to the Base_Endpoint__c to construct the final http endpoint value.</inlineHelpText>
        <label>List Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapper_Class__c</fullName>
        <defaultValue>&quot;SalesforceConnectGenericMapper&quot;</defaultValue>
        <label>Mapper Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Fields__c</fullName>
        <description>Enter the API Field Names that will be used to generate the endpoint</description>
        <label>Parameter Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Class__c</fullName>
        <defaultValue>&quot;SalesforceConnectGenericService&quot;</defaultValue>
        <label>Service Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Salesforce Connect Service Setting</label>
    <pluralLabel>Salesforce Connect Service Settings</pluralLabel>
</CustomObject>